[package]
name = "bitcoin-amount"
version = "0.1.0"
authors = ["Jean Pierre Dudey <jeandudey@hotmail.com>"]

[features]
serde_impl = ["serde"]
serde_json_number = ["serde_json"]

[dependencies.serde]
optional = true
version = "1"

[dependencies.serde_json]
features = ["arbitrary_precision"]
optional = true
version = "1"
